Add override, stop start service and simplify toggle light api mapping

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HueControl</string>
+    <string name="all_lights_on">All Lights On</string>
+    <string name="all_lights_off">All lights off</string>
 </resources>
